--- a/data-analyst-roadmap/requirements.txt
+++ b/data-analyst-roadmap/requirements.txt
@@ -31,3 +31,34 @@ statsmodels>=0.14.0
 
 # Progress bars
 tqdm>=4.65.0
+
+# Database Connectors
+psycopg2-binary>=2.9.0  # PostgreSQL
+pymysql>=1.1.0          # MySQL
+sqlparse>=0.4.0         # SQL formatting
+
+# Dashboard & Web Apps
+streamlit>=1.28.0
+dash>=2.14.0
+plotly-express>=0.4.0
+
+# Web Scraping (Advanced)
+selenium>=4.15.0
+lxml>=4.9.0
+
+# Time Series Analysis
+prophet>=1.1.0
+
+# Data Validation
+pandera>=0.17.0
+
+# Notebook Utilities
+nbconvert>=7.11.0
+nbformat>=5.9.0
+
+# Additional Visualization
+wordcloud>=1.9.0
+folium>=0.15.0  # Maps
+
+# Performance
+numba>=0.58.0
