--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,12 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r data-analyst-roadmap/requirements_docs.txt
+        python -m ipykernel install --user --name python3 --display-name "Python 3"
 
     - name: Build the book
       run: |
         # Build the book from source with verbose logging
-        jupyter-book build data-analyst-roadmap -v
+        jupyter-book build data-analyst-roadmap --path-output data-analyst-roadmap/_build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
