--- a/data-analyst-roadmap/_config.yml
+++ b/data-analyst-roadmap/_config.yml
@@ -26,7 +26,10 @@ launch_buttons:
 html:
   use_issues_button: true
   use_repository_button: true
-  repository_url: "https://github.com/wasim/Data-Science"
-  repository_branch: "main"
-  path_to_book: "data-analyst-roadmap"
   home_page_in_navbar: true
+
+# Repository settings
+repository:
+  url: "https://github.com/wasim/Data-Science"
+  branch: "main"
+  path_to_book: "data-analyst-roadmap"
