Add undeployment terms to spell checker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,11 @@
         "numpy",
         "matplotlib",
         "seaborn",
-        "plotly"
+        "plotly",
+        "Wasim",
+        "NONINFRINGEMENT",
+        "Undeploy",
+        "Undeployment"
     ],
     "ltex.dictionary": {
         "en-US": [
@@ -32,7 +36,11 @@
             "numpy",
             "matplotlib",
             "seaborn",
-            "plotly"
+            "plotly",
+            "Wasim",
+            "NONINFRINGEMENT",
+            "Undeploy",
+            "Undeployment"
         ]
     }
 }
