--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,9 @@
         "Wasim",
         "NONINFRINGEMENT",
         "Undeploy",
-        "Undeployment"
+        "Undeployment",
+        "undeploy",
+        "undeployment"
     ],
     "ltex.dictionary": {
         "en-US": [
@@ -40,7 +42,9 @@
             "Wasim",
             "NONINFRINGEMENT",
             "Undeploy",
-            "Undeployment"
+            "Undeployment",
+            "undeploy",
+            "undeployment"
         ]
     }
 }
